# Xftp

./: README.md
demo/fifo_demo/: CMakeLists.txt
demo/socket_demo/: CMakeLists.txt  client.c  server.c
include/xtask/: xftp_server_cmd.h  xftp_task.h  xftp_user.h  xlog.h  xtask_base.h
src/xtask/: xftp_server_cmd.cpp  xftp_task.cpp  xftp_user.cpp
